<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".PermisonActivity">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="41dp"
        android:src="@mipmap/ic_launcher" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="24dp" />

    <LinearLayout
        android:id="@+id/ll_pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"

        android:layout_marginEnd="35dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginTop="25dp"

            android:text="@string/pp_tip"
            android:textColor="@color/text_color"
            android:textSize="12dp" />


        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">

            <ImageView
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_camera" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_camera"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/iv_camera"
                android:text="@string/camera"
                android:textColor="@color/text_color"
                android:textSize="18dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/iv_camera"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/iv_camera"
                android:text="@string/camera_tip"
                android:textColor="@color/text_color_gray"
                android:textSize="12dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">

            <ImageView
                android:id="@+id/iv_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_phone_book" />


            <TextView
                android:id="@+id/tv_str_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_phone"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/iv_phone"
                android:text="@string/phone_book"
                android:textColor="@color/text_color"
                android:textSize="18dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_str_phone"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/iv_phone"
                android:text="@string/phone_book_tip"
                android:textColor="@color/text_color_gray"
                android:textSize="12dp" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:layout_marginTop="21dp">

            <ImageView
                android:id="@+id/iv_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@mipmap/icon_call" />


            <TextView
                android:id="@+id/tv_str_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/iv_call"
                android:layout_marginLeft="16dp"
                android:layout_toRightOf="@+id/iv_call"
                android:text="@string/call"
                android:textColor="@color/text_color"
                android:textSize="18dp" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_below="@+id/tv_str_call"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="4dp"
                android:layout_toRightOf="@+id/iv_call"
                android:text="@string/call_tip"
                android:textColor="@color/text_color_gray"
                android:textSize="12dp" />


        </RelativeLayout>


    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="17dp"
        android:layout_marginEnd="60dp"
        android:text="@string/login_pp_tip"
        android:textColor="@color/text_color"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tv_pp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="60dp"
        android:text="@string/login_pp"
        android:textColor="#007AFF"
        android:textSize="12sp" />


    <include
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="46dp"
        layout="@layout/layout_confirm_pp"/>


    <Button
        android:id="@+id/btn_request"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="29dp"
        android:text="@string/ok_and_go"
        android:textSize="18dp"
        android:textColor="@color/white"
        android:background="@drawable/shape_btn_blue" />


</LinearLayout>


</ScrollView>